
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 	android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplaySettingsActivity"
   	android:background="@drawable/greengradient">
    
    <TextView android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" 
       	android:layout_centerHorizontal="true" 
        android:textColor="#FFFFFF"
        android:textSize="48sp" 
		android:layout_marginBottom="320dp"
   	/>
    
    <LinearLayout
 		android:layout_width="match_parent"
    	android:layout_height="match_parent"
		android:paddingTop="80dp">
        
        <TextView
            android:layout_weight="1"
			android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/activity_settings_time" 
	        android:textSize="20sp"
	        android:textColor="#FFFFFF"
	        
   		/>
        
        <!--Might be worth looking at putting a spinner here instead of a simple input box-->
        
        <EditText android:id="@+id/time_value"
      		android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	      	android:hint="@string/activity_settings_enter_time" 
	      	android:textColor="#FFFFFF"
   		/>
     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
		android:paddingTop="120dp">
        
    	<TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/activity_settings_passphrase" 
	        android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            
   		/>
    	
    	<EditText android:id="@+id/passphrase_value"
      		android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	      	android:hint="@string/activity_settings_passphrase"
	        android:textColor="#FFFFFF" 
	        android:inputType="textPassword"
   		/>
    	
	</LinearLayout>
	
    <LinearLayout
   	android:layout_width="match_parent"
   	android:layout_height="match_parent"
	android:paddingTop="160dp">
       
    	<TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/activity_settings_txtNum" 
	        android:textSize="20sp"
			android:layout_weight="1"
			android:textColor="#FFFFFF"
			
   		/>
    	
    	<EditText android:id="@+id/phoneNum_value"
      		android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	      	android:hint="@string/activity_settings_txtNumInput" 
	        android:textColor="#FFFFFF"
   		/>
    	
	</LinearLayout>
	
    <RelativeLayout
    	android:layout_width="fill_parent"
	   	android:layout_height="wrap_content"
		android:layout_marginTop="400dp">
       
	    <Button android:id="@+id/btnSave"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	      	android:layout_marginLeft ="20dp"
	        android:layout_marginBottom="20dp"
			android:text="@string/activity_settings_submit"
			android:onClick="openNavigate"			
	    />
	    
	   	<Button android:id="@+id/btnDeleteSet"
	   	    android:layout_alignParentRight="true"
	        android:layout_width="wrap_content"
        	android:layout_height="45dp"
	        android:layout_marginBottom="20dp"
			android:layout_marginRight="20dp"
			android:text="@string/activity_settings_delete"
			android:onClick="openSettings"
	    />
   	
   	
   	</RelativeLayout>
	    
 
</RelativeLayout>
