<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DestinationEntry"
	android:background="@drawable/greengradient">
    
	<TextView android:id="@+id/destTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_destination_title"
        android:textSize="50sp"
		android:layout_marginBottom="320dp"
		android:paddingLeft="30dp"
		android:layout_centerHorizontal="true"
		android:textColor="#FFFFFF"
		
   	/>
	
	    
    <RelativeLayout

 		android:layout_width="match_parent"
    	android:layout_height="match_parent"
		android:paddingTop="90dp">
              
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/activity_destination_start" 
	        android:textSize="20sp"
			android:textColor="#FFFFFF"
			android:layout_alignParentLeft="true"
   		/>
        
        <TextView android:id="@+id/start_value"
      		android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	      	android:hint="@string/activity_start_title" 
			android:textColor="#FFFFFF"
			android:layout_alignParentRight="true"
			android:textSize="20sp"
			android:layout_gravity="right"/>
        
			  	
     </RelativeLayout>
        
    
    <RelativeLayout

 		android:layout_width="match_parent"
    	android:layout_height="match_parent"
		android:paddingTop="180dp">
      
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/activity_destination_ending" 
	        android:textSize="20sp"
			android:textColor="#FFFFFF"
			android:layout_alignParentLeft="true"
			
   		/>
                     
        <TextView android:id="@+id/dest_value"
      		android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	      	android:hint="@string/activity_destination_place" 
	      	android:completionThreshold="3"  
			android:textColor="#FFFFFF"
			android:textSize="20sp"
			android:layout_alignParentRight="true"
   		/>	
   	</RelativeLayout>
   		
     <RelativeLayout
 		android:layout_width="match_parent"
    	android:layout_height="match_parent"
		android:paddingTop="220dp">
      
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/activity_destination_timeEstimated" 
	        android:textSize="20sp"
			android:textColor="#FFFFFF"
			android:layout_alignParentLeft="true"
   		/>
                     
        <TextView android:id="@+id/time_estimated"
      		android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	      	android:hint="@string/activity_destination_place" 
			android:textColor="#FFFFFF"
	        android:textSize="20sp"
	        android:layout_alignParentRight="true"
   	 />	
   		
     </RelativeLayout>
     
        		
     <LinearLayout
 		android:layout_width="match_parent"
    	android:layout_height="match_parent"
		android:paddingTop="260dp">
      
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/activity_destination_timeRemaining" 
	        android:textSize="20sp"
			android:textColor="#FFFFFF"
			android:layout_weight="1"
   		/>
                     
        <TextView android:id="@+id/time_remaining"
      		android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	      	android:hint="@string/activity_destination_place" 
			android:textColor="#FFFFFF"
			android:textSize="20sp"			
	   	 />	
   		
     </LinearLayout>
     
   	<RelativeLayout
 		android:layout_width="match_parent"
    	android:layout_height="match_parent"
		android:paddingTop="300dp">
      
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/activity_destination_enterPassword" 
	        android:textSize="20sp"
			android:textColor="#FFFFFF"
          	android:layout_alignParentLeft="true"
          
   		/>
                     
        <EditText android:id="@+id/password_entry"
      		android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	      	android:hint="@string/activity_destination_enterPassword" 
			android:textColor="#FFFFFF"   
	        android:layout_alignParentRight="true" 
	        android:inputType="textPassword"
	        android:textSize="20sp"
   	 />	
   		
        	
     </RelativeLayout>
     
	   <Button android:id="@+id/btn_destination_finished"
	        android:layout_width="wrap_content"
	       	android:layout_height="45dp"
	        android:layout_marginBottom="20dp"
			android:layout_marginRight="20dp"
			android:text="@string/activity_destination_finished"
			android:onClick=""
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true" 
			
	 />
   	
</RelativeLayout>
